fix word wrap in modal

--- a/src/plugin.css
+++ b/src/plugin.css
@@ -7,3 +7,11 @@
 #sentimony-emotion:hover {
   text-decoration: none;
 }
+
+#sentimony-report-body * {
+  white-space: normal;
+}
+
+.keyword {
+  font-style: italic;
+}
